--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -1,7 +1,7 @@
 # /etc/nginx/conf.d/example.com.conf
 server {
     server_name example.com www.example.com;
-    root /var/www/project/public;
+    root /var/www/public;
 
     location / {
         # try to serve file directly, fallback to index.php
@@ -17,10 +17,10 @@ server {
 
     location ~ ^/index\.php(/|$) {
         # when using PHP-FPM as a unix socket
-        fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;
+        # fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;
 
         # when PHP-FPM is configured to use TCP
-        # fastcgi_pass 127.0.0.1:9000;
+        fastcgi_pass php:9000;
 
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
