--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -1,5 +1,6 @@
 # /etc/nginx/conf.d/example.com.conf
 server {
+    listen 8080;
     server_name example.com www.example.com;
     root /var/www/public;
 
