--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -9,6 +9,11 @@ api_platform:
         extra_properties:
             standard_put: true
 
+    swagger:
+        api_keys:
+            JWT:
+                name: Authorization
+                type: header
     resource_class_directories:
         - '%kernel.project_dir%/src/Entity'
     doctrine:
